fullCalendar and posts/paginator-v2 issues fixed, and calendar data added

--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -27,7 +27,8 @@ layout: default
                                 <input type="hidden" name="hosted_button_id" value="{{ page.paypal_button_id }}">
                                 <input type="image" src="https://www.paypalobjects.com/es_XC/MX/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal, la forma más segura y rápida de pagar en línea.">
                                 <img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
-                                <a href="{{ site.baseurl }}/payment-methods" class="btn btn-primary">OTRAS FORMAS DE PAGO</a>
+                                <a href="{{ site.baseurl }}/payment-methods" class="btn btn-primary">Otras Formas de Pago</a>
+                                <a href="{{ site.baseurl }}/calendar" class="btn btn-secondary">Próximas Fechas</a>
                             </div>
                         </form>
                     </div>
