--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,13 +15,6 @@
     <link href="{{ site.baseurl }}/assets/css/theme.css" rel="stylesheet"/>
     <link href="{{ site.baseurl }}/assets/css/custom.css" rel="stylesheet"/>
 
-
-    {% if page.calendar %}
-    <link href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css' rel='stylesheet' />
-    <link href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css' rel='stylesheet' />
-    {% endif %}
-
-
 {{site.sharethis}}
     
 {% if jekyll.environment == 'production' %}    
@@ -105,7 +98,7 @@
                 </li> 
                 
                  <li class="nav-item">                
-                    <a target="_blank" class="nav-link" href="https://github.com/microservicios-mx">Github</a>
+                    <a target="_blank" class="nav-link" href="{{ site.baseurl }}/calendar">Calendario de Talleres</a>
                 </li> 
                 
                 <!--
