--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
-<title>{{ page.title }} | {{site.name}}</title>
-{% if page.description or page.excerpt %}<meta name="description" content="{{ page.description }}">{% endif %}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"/>
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css?family=Rubik:400,400i,500,500i,700,700i" rel="stylesheet"/>
+    <!-- To solve content over HTTPS, but requested an insecure XMLHttpRequest endpoint: https://stackoverflow.com/a/48700852/5078874 -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
+    <title>{{ page.title }} | {{site.name}}</title>
+    {% if page.description or page.excerpt %}<meta name="description" content="{{ page.description }}">{% endif %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Rubik:400,400i,500,500i,700,700i" rel="stylesheet"/>
     <link href="{{ site.baseurl }}/assets/css/mbr-style.css" rel="stylesheet"/>
     <link href="{{ site.baseurl }}/assets/css/mbr-additional.css" rel="stylesheet"/>
     <link href="{{ site.baseurl }}/assets/css/mobirise-icons/mobirise-icons.css" rel="stylesheet"/>
