--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -27,8 +27,11 @@ layout: default
                                 <input type="hidden" name="hosted_button_id" value="{{ page.paypal_button_id }}">
                                 <input type="image" src="https://www.paypalobjects.com/es_XC/MX/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal, la forma más segura y rápida de pagar en línea.">
                                 <img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
-                                <a href="{{ site.baseurl }}/payment-methods" class="btn btn-primary">Otras Formas de Pago</a>
+                                <div class="btn-group btn-group-sm">
+                                    <a href="{{ site.baseurl }}/payment-methods" class="btn btn-primary">Otras Formas de Pago</a>
                                 <a href="{{ site.baseurl }}/calendar" class="btn btn-secondary">Próximas Fechas</a>
+                                <a href="#workshop-venue" class="btn btn-info">Lugar</a>
+                                </div>
                             </div>
                         </form>
                     </div>
@@ -83,13 +86,58 @@ layout: default
         </div>
     </div>
 
-    {% if page.comments == true %}
-    <div id="comments" class="row mb-5">
-        <div class="col-md-8">              
-            {% include disqus.html %}                
-        </div>
-    </div>
-    
-    {% endif %}
-    
 </section>
+
+    <section class="mbr-section form4 cid-r9ZDsEBwgP" id="workshop-venue">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                        <h5 class="pb-3 align-left mbr-fonts-style display-7">
+                            {% comment %} @todo - Retrieve the venue information from event definition {% endcomment %}
+                            Av. Camelinas #1414, Morelia, Mich</h5>
+                        {% comment %} @todo - define places IDs in the event definition {% endcomment %}
+                    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key={{ site.google_maps_api_key }}&amp;q=place_id:ChIJq0p5uegNLYQRhG1EFGV6nO4" allowfullscreen=""></iframe></div>
+                </div>
+                <div class="col-md-6">
+                    <h2 class="pb-3 align-left mbr-fonts-style display-2">
+                        Escríbenos</h2>
+                    <div>
+                        <div class="icon-block pb-3">
+                        <span class="icon-block__icon">
+                            <span class="mbri-letter mbr-iconfont"></span>
+                        </span>
+                            <h4 class="icon-block__title align-left mbr-fonts-style display-5">No dudes en contactarnos</h4>
+                        </div>
+                        <div class="icon-contacts pb-3">
+                            <h5 class="align-left mbr-fonts-style display-7">
+                                Estamos para ayudarte</h5>
+                            <p class="mbr-text align-left mbr-fonts-style display-7">
+                                Tel: &nbsp;(443) 395 7626&nbsp;<br></p>
+                        </div>
+                    </div>
+                    <div data-form-type="formoid">
+                        <div data-form-alert="" hidden="">Gracias por tu mensaje!</div>
+                        <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Contacto Taller {{ page.title }}"><input type="hidden" name="email" data-form-email="true" value="IZ6s2Fo2o/mgt43jS94Pa7v7FXZSwmMiOUTFDiHxKsiCxGmAPfsduZUTG12cVcvUNymwT3iT97xZXXD0iXviTLCom1NVHTUSGUujpaLk8O5fDw9ZNlc7BqT1wMUMHZTx">
+                            <div class="row">
+                                <div class="col-md-6 multi-horizontal" data-for="name">
+                                    <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Nombre" required="" id="name-form4-5">
+                                </div>
+                                <div class="col-md-6 multi-horizontal" data-for="phone">
+                                    <input type="text" class="form-control input" name="phone" data-form-field="Phone" placeholder="Teléfono" required="" id="phone-form4-5">
+                                </div>
+                                <div class="col-md-12" data-for="email">
+                                    <input type="text" class="form-control input" name="email" data-form-field="Email" placeholder="Correo" required="" id="email-form4-5">
+                                </div>
+                                <div class="col-md-12" data-for="message">
+                                    <textarea class="form-control input" name="message" rows="3" data-form-field="Message" placeholder="Mensaje" style="resize:none" id="message-form4-5"></textarea>
+                                </div>
+                                <div class="input-group-btn col-md-12" style="margin-top: 10px;">
+                                    <button href="" type="submit" class="btn btn-primary btn-form display-4">ENVIAR MENSAJE</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
